--- a/pubman/pubman_presentation/src/main/webapp/editItem/EventGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/EventGroup.jspf
@@ -53,7 +53,7 @@
 		</h:panelGroup>
 
 <%-- Alternative event title --%>
-		<tr:iterator var="altTitle" value="#{EditItem.eventTitleCollection.alternativeTitleManager.objectDM}" rendered="#{!(genre.events_event_title_alternative_display == 'false' && genre.events_event_title_alternative_form_id == 'full-submission' || genre.events_event_title_alternative_display == 'false' && genre.events_event_title_alternative_form_id == 'all')}">
+		<tr:iterator id="iterAlternativeEventTitle" var="altTitle" value="#{EditItem.eventTitleCollection.alternativeTitleManager.objectDM}" rendered="#{!(genre.events_event_title_alternative_display == 'false' && genre.events_event_title_alternative_form_id == 'full-submission' || genre.events_event_title_alternative_display == 'false' && genre.events_event_title_alternative_form_id == 'all')}">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 				<b class="xLarge_area0_p8 endline labelLine clear">
 					&#160;<h:outputText id="txtAlternateEventTitle" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.events_event_title_alternative_optional != 'true'}" /><h:outputText value="#{genre.events_event_title_alternative_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
