--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_PubMan/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_PubMan/styles/appearance.css
@@ -530,13 +530,13 @@ FORM BG			#FFFFFF
 	.activeButton {
 		float: right;
 		color: #FFFFFF !important;
-		background-color: #147DA2;
+		background-color: #147DA2 !important;
 		border-color: #147DA2;
 	}
 	
 	.activeButton:hover {
 		color: #FFFFFF !important;
-		background-color: #382926;
+		background-color: #382926 !important;
 		border-color: #382926;
 	}
 	
