--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_classic/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_classic/styles/appearance.css
@@ -530,13 +530,13 @@ FORM BG			#FFFFFF
 	.activeButton {
 		float: right;
 		color: #FFFFFF !important;
-		background-color: #307086;
+		background-color: #307086 !important;
 		border-color: #307086;
 	}
 	
 	.activeButton:hover {
 		color: #FFFFFF !important;
-		background-color: #222222;
+		background-color: #222222 !important;
 		border-color: #222222;
 	}
 	
