--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/lists.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/lists.css
@@ -46,6 +46,14 @@
 	margin: 0px;
 }
 
+/*PRE-HEADER*/
+
+.preListHeader {
+	border-top: 0.09em solid !important;
+	padding-top: 0.19em;
+	padding-bottom: 0.19em;
+}
+
 /*LIST HEADER*/
 
 	/*GENERAL*/
