--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_classic/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_classic/styles/appearance.css
@@ -385,7 +385,7 @@ FORM BG			#FFFFFF
 		border-top-color: #B9B9B9 !important;
 	}
 	
-	.itemTile .tileIconArea {
+	.tiledList .metaDataSection, .itemTile .tileIconArea {
 		border-color: #B9B9B9 !important;
 		border-style: solid;
 	}
