--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/pubman_component_css/extPaginator.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/pubman_component_css/extPaginator.css
@@ -127,8 +127,12 @@
 		margin-top: 0.09em;
 	}
 
-	.pageBrowser input, .pageBrowser button, .pageBrowser a {
+	.pageBrowser input, .pageBrowser button {
 		height: 2.45em;
+	}
+	
+	.pageBrowser a {
+		padding-top: 0.19em;
 	}
 
 	.pageBrowser .seperator, .pageBrowser .actualSeperator {
