--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/extPaginator.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/extPaginator.css
@@ -150,10 +150,11 @@
 		float: left;
 	}
 
-	.pageBrowser input, .pageBrowser button, .pageBrowser a {
+	.pageBrowser input, .pageBrowser button, .pageBrowser a, .pageBrowser span {
 		margin: 0px;
 		border: 0px;
 		display: block;
+		text-align: center;
 		text-decoration: none;
 	}
 
