added suggestions from http://colab.mpdl.mpg.de/mediawiki/PubMan_Wording

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -81,7 +81,7 @@
 		</div>
 		<div class="subHeader">
 			<!-- Subheadline starts here -->
-			<h:outputText value="#{lbl.easy_submission_lblCollectionOfImportedItem1} #{EasySubmission.contextName}#{lbl.easy_submission_lblCollectionOfImportedItem2}." />
+			<h:outputText value="#{lbl.easy_submission_lblCollectionOfItem} #{EasySubmission.contextName}." />
 			<!-- Subheadline ends here -->
 		</div>
 		<div class="subHeader">
